added new engine endpoint to swagger
