# controllers/engineController.js
@@ -1,11 +1,13 @@
 require('dotenv').config();
 const axios = require('axios')
+const { SOUL_API_BASE_URL } = process.env;
+
 
 
 const publish = async (req, res) => {
     try {
         const graphId = req.body.graph_id;
-        const schemaResponse = await axios.get(`http://localhost:3001/api/tables/graphs/rows/${graphId}`);
+        const schemaResponse = await axios.get(`${SOUL_API_BASE_URL}/api/tables/graphs/rows/${graphId}`);
         const schemaData = schemaResponse?.data?.data;
         const transformedData = transformSchemaData(schemaData);
         console.log("🚀 ~ publish ~ transformedData:", JSON.stringify(transformedData));
