# swagger.json
@@ -23,6 +23,10 @@
         {
             "name": "user-controller",
             "description": "User Controller"
+        },
+        {
+            "name": "engine-endpoints",
+            "description": "Engine Endpoints"
         }
     ],
     "paths": {
@@ -355,6 +359,94 @@
                                 },
                                 "message": {
                                     "type": "string", "example": "Email is duplicate. You don't have permission to perform this operation!"
+                                }
+                            }
+                        },
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/engine/publish": {
+            "post": {
+                "tags": [
+                    "engine-endpoints"
+                ],
+                "operationId": "publishToEnginePOST",
+                "summary": "Send schema to FEBE engine",
+                "consumes": [
+                    "application/json"
+                ],
+                "description": "Send schema to FEBE engine.",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "GraphId",
+                        "description": "Request body as following",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "graphId": {
+                                    "type": "string",
+                                    "example": "test"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "success": {
+                                    "type": "string", "example": "ok"
+                                },
+                                "message": {
+                                    "type": "string", "example": "Data sent to backend successfully"
+                                },
+                                "data": {
+                                    "type": "object",
+                                    "properties": {
+                                        "projectName": {
+                                            "type": "string", "example": "Northwind"
+                                        },
+                                        "tables": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string", "example": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 400
+                                },
+                                "message": {
+                                    "type": "string", "example": "Error sending data to backend. Possible invalid ID: <message>"
+                                }
+                            }
+                        },
+                        "description": "Bad Request"
+                    },
+                    "403": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 403
+                                },
+                                "message": {
+                                    "type": "string", "example": "Error sending data to backend. Possible invalid ID: <message>"
                                 }
                             }
                         },
